[package]
name = "tracker-server"
version = "2.5.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["rustls-tls", "native-tls"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "uuid", "time"] }
## removed bendy; we'll hand-encode minimal bencode
hex = "0.4"
percent-encoding = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
time = { version = "0.3", features = ["macros"] }
anyhow = "1"
thiserror = "1"
once_cell = "1"
lazy_static = "1"
rand = "0.8"
tokio-tungstenite = { version = "0.21" }
futures-util = "0.3"

[profile.release]
lto = true
codegen-units = 1
